ecom-app-src/kubernetes-yamls-for-ecom-app/product-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-app
spec:
  selector:
    matchLabels:
      app: product-app
  replicas: 2
  template:
    metadata:
      labels:
        app: product-app
    spec:
      containers:
        - name: product-app-container
          image: ram1uj/product-app:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          startupProbe:
            exec:
              command:
                - "ls"
                - "/boot"
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

      tolerations:
        - key: "app"
          operator: "Equal"
          value: "backend"
          effect: "NoSchedule"

#      nodeSelector:
#        disktype: hdd

#      affinity:
#         nodeAffinity:
#           preferredDuringSchedulingIgnoredDuringExecution:
#                - weight: 1
#                  preference:
#                    matchExpressions:
#                      - key: disktype
#                        operator: In
#                        values:
#                          - hdd
#
#           requiredDuringSchedulingIgnoredDuringExecution:
#             nodeSelectorTerms:
#               - matchExpressions:
#                   - key: disktype
#                     values:
#                       - ssd
#                     operator: In





      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"
