ecom-app-src/kubernetes-yamls-for-ecom-app/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080

  selector:
    app: product-app
